	+------------+
	| Commando   |
	|        418 |
	+------------+

+ 01/04/14 [0.1] (idée le 31/03/14)
-----------------------------------
 -> Implémentation d'un plateau de jeu basique, sans obstacles
 -> Modèle du personnage et des projectiles
 -> Adaption au "multijoueur" (1 humain + IAs)
 -> Gestion du clavier (multitouches)
 -> Gestion de la souris
 -> Implémentation de la théière céleste

+ 03/04/14
----------
 -> Uniformisation de la vitesse de déplacement (dépend maintenant du temps et
 non de la vitesse de l'ordinateur)
 -> Réduction de la taille du personnage afin qu'il tienne dans une seule case
 -> Ajout des obstacles, de leur carte et de leur hitbox

+ 20/04/14 (Easter update)
----------
 -> Ajout d'une fonction de création de labyrinthe
 -> Modification du positionnement des obstacles
 -> Réduction du terrain (pour limiter les lags et rendre le jeu finissable)

+ 21/04/14
----------
 -> Ajout du mode NoClip pour le débugage
 -> Ajout d'une zone d'arrivée marquée et signalée par un donut volant
 -> Ainsi qu'une fonction de victoire quand on atteint la dalle de fin

+ 27/04/14 [0.5]
----------
 -> Implémentation de la gestion des obstacles par 4-arbre
 -> Limitation de la portée de vision grâce au 4-arbre
 -> Ajout d'un mode de caméra "aérienne" avec des transitions "douces"
 -> Ajout d'un mode avec portée augmentée avec transition "douce"

+ 28/04/14
----------
 -> Correction de glitches de la théière dans les murs
 -> Ajout d'une touche d'arrêt du jeu
 -> Ajout d'une fonction propre d'arrêt
 -> Implémentation du rebond des projectiles sur les murs
 -> Ajout d'un timer

+ 29/04/14
----------
 -> Ajout du strafing (déplacement latéral)
 -> Avancement du frustum (corrige un bug graphique)